// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render query summary 1`] = `
.c1 {
  margin: 0 0 10px 0;
  padding: 0;
  border-collapse: collapse;
  table-layout: fixed;
  text-align: left;
}

.c4 {
  padding: 0 20px 10px 0;
  font-family: 'Lato Bold',sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #4F5B5F;
}

.c6 {
  padding: 0 0 10px 0;
  font-family: 'Lato Regular',sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #4F5B5F;
}

.c2 {
  vertical-align: top;
}

.c2:last-child .c3,
.c2:last-child .c5 {
  padding-bottom: 0;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: inline-block;
  margin-left: 3px;
  margin-right: 3px;
}

.c0 {
  padding: 20px;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <tbody
        class=""
      >
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            Analysis:
          </th>
          <td
            class="c5 c6"
          >
            sum
          </td>
        </tr>
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            Event Stream:
          </th>
          <td
            class="c5 c6"
          >
            purchases
          </td>
        </tr>
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            Target Property:
          </th>
          <td
            class="c5 c6"
          >
            <div
              class="c7"
            >
              <span>
                item
              </span>
              <span
                class="c8"
              >
                <svg
                  height="10"
                  opacity="1"
                  viewBox="0 0 30 30"
                  width="10"
                >
                  <polygon
                    fill="#77A3BB"
                    points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c7"
            >
              <span>
                price
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            Applied Filters:
          </th>
          <td
            class="c5 c6"
          >
            1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`should render query summary for funnels 1`] = `
.c1 {
  margin: 0 0 10px 0;
  padding: 0;
  border-collapse: collapse;
  table-layout: fixed;
  text-align: left;
}

.c4 {
  padding: 0 20px 10px 0;
  font-family: 'Lato Bold',sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #4F5B5F;
}

.c6 {
  padding: 0 0 10px 0;
  font-family: 'Lato Regular',sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #4F5B5F;
}

.c2 {
  vertical-align: top;
}

.c2:last-child .c3,
.c2:last-child .c5 {
  padding-bottom: 0;
}

.c8 {
  border: 1px solid #EDEDED;
}

.c8 + .c7 {
  border-top: none;
}

.c9 {
  padding: 10px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c10 {
  margin-right: 10px;
}

.c11 {
  margin-right: 10px;
  font-family: 'Lato Bold',sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #4F5B5F;
}

.c12 {
  font-family: 'Lato Regular',sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #4F5B5F;
}

.c0 {
  padding: 20px;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <tbody
        class=""
      >
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            Analysis:
          </th>
          <td
            class="c5 c6"
          >
            funnel
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="c7 c8"
    >
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <svg
            height="15"
            opacity="1"
            viewBox="0 0 30 30"
            width="15"
          >
            <polygon
              fill="rgba(79,91,95,0.7)"
              points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
            />
          </svg>
        </div>
        <div
          class="c11"
        >
          Step
           
          1
        </div>
        <div
          class="c12"
        >
          signups
        </div>
      </div>
    </div>
    <div
      class="c7 c8"
    >
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <svg
            height="15"
            opacity="1"
            viewBox="0 0 30 30"
            width="15"
          >
            <polygon
              fill="rgba(79,91,95,0.7)"
              points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
            />
          </svg>
        </div>
        <div
          class="c11"
        >
          Step
           
          2
        </div>
        <div
          class="c12"
        >
          purchases
        </div>
      </div>
    </div>
  </div>
</div>
`;
